force-app/main/default/objects/Faculty__c/fields/Faculty_Age__c.field-meta.xml
<CustomField>
    <fullName>Faculty_Age__c</fullName>
    <formula>FLOOR(
(TODAY() - DOB__c) / 365
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Faculty Age</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>