force-app/main/default/objects/Faculty__c/fields/Faculty_ID__c.field-meta.xml
<CustomField>
    <fullName>Faculty_ID__c</fullName>
    <label>Faculty ID</label>
    <type>AutoNumber</type>
</CustomField>