force-app/main/default/objects/Faculty__c/fields/Faculty_Status__c.field-meta.xml
<CustomField>
    <fullName>Faculty_Status__c</fullName>
    <formula>IF(
ISBLANK(Email__c),
&quot;Incomplete&quot;,
&quot;Active&quot;
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Faculty Status</label>
    <type>Text</type>
</CustomField>