force-app/main/default/objects/Faculty__c/validationRules/Age_must_be_above_21.validationRule-meta.xml
<ValidationRule>
    <fullName>Age_must_be_above_21</fullName>
    <active>true</active>
    <errorConditionFormula>TODAY() - DOB__c &lt; 7665</errorConditionFormula>
    <errorMessage>Faculty age must be at least 21 years.</errorMessage>
</ValidationRule>