force-app/main/default/objects/Faculty__c/validationRules/DOB_cannot_be_future_date.validationRule-meta.xml
<ValidationRule>
    <fullName>DOB_cannot_be_future_date</fullName>
    <active>true</active>
    <errorConditionFormula>DOB__c &gt; TODAY()</errorConditionFormula>
    <errorMessage>Date of Birth cannot be in the future.</errorMessage>
</ValidationRule>