force-app/main/default/objects/Faculty__c/validationRules/Email_should_belong_to_college_domain.validationRule-meta.xml
<ValidationRule>
    <fullName>Email_should_belong_to_college_domain</fullName>
    <active>true</active>
    <errorConditionFormula>NOT(
CONTAINS(
Email__c,
&quot;@college.edu&quot;
)
)</errorConditionFormula>
    <errorMessage>Use your official college email.</errorMessage>
</ValidationRule>