force-app/main/default/objects/Faculty__c/validationRules/Emergency_Contact_should_not_be_same_as.validationRule-meta.xml
<ValidationRule>
    <fullName>Emergency_Contact_should_not_be_same_as</fullName>
    <active>true</active>
    <errorConditionFormula>Emergency_Contact__c = Mobile__c</errorConditionFormula>
    <errorMessage>Emergency contact cannot be the same as mobile number.</errorMessage>
</ValidationRule>