force-app/main/default/objects/Faculty__c/validationRules/Mobile_Number_must_be_exactly_10_digits.validationRule-meta.xml
<ValidationRule>
    <fullName>Mobile_Number_must_be_exactly_10_digits</fullName>
    <active>true</active>
    <errorConditionFormula>NOT(
REGEX(
Mobile__c,
&quot;^[6-9][0-9]{9}$&quot;
)
)</errorConditionFormula>
    <errorMessage>Enter a valid 10-digit mobile number.</errorMessage>
</ValidationRule>